# shikomi

./: .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  justfile  lefthook.yml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  back-merge-check.yml  bench-kdf.yml  branch-policy.yml  lint.yml  pr-title-check.yml  test-cli.yml  test-daemon.yml  test-infra.yml  unit-core.yml  windows.yml
crates/shikomi-cli/: Cargo.toml
crates/shikomi-cli/src/: cli.rs  error.rs  lib.rs  main.rs  record_runners.rs  view.rs
crates/shikomi-cli/src/accessibility/: audio_tts.rs  braille_brf.rs  file_acl.rs  mod.rs  output_target.rs  print_pdf.rs  screen_reader.rs  umask.rs
crates/shikomi-cli/src/hardening/: core_dump.rs  mod.rs
crates/shikomi-cli/src/input/: dto.rs  mnemonic.rs  mod.rs  password.rs
crates/shikomi-cli/src/io/: ipc_client.rs  ipc_vault_repository.rs  mod.rs  paths.rs  terminal.rs  windows_sid.rs
crates/shikomi-cli/src/presenter/: cache_relocked_warning.rs  error.rs  list.rs  mod.rs  mode_banner.rs  prompt.rs  success.rs  warning.rs
crates/shikomi-cli/src/usecase/: add.rs  edit.rs  list.rs  mod.rs  remove.rs
crates/shikomi-cli/src/usecase/vault/: change_password.rs  decrypt.rs  encrypt.rs  lock.rs  mod.rs  rekey.rs  rotate_recovery.rs  unlock.rs
crates/shikomi-cli/tests/: e2e_add.rs  e2e_edit.rs  e2e_encrypted.rs  e2e_i18n.rs  e2e_list.rs  e2e_personas.rs  e2e_remove.rs  e2e_uninitialized.rs  e2e_vault_path.rs  it_ipc_vault_repository.rs  it_ipc_vault_repository_phase15.rs  it_usecase_add.rs  it_usecase_cross.rs  it_usecase_edit.rs  it_usecase_list.rs  it_usecase_remove.rs
crates/shikomi-cli/tests/common/: fixtures.rs  mod.rs
crates/shikomi-core/: Cargo.toml
crates/shikomi-core/src/: error.rs  lib.rs
crates/shikomi-core/src/crypto/: aead_key.rs  header_aead.rs  key.rs  mod.rs  password.rs  recovery.rs  verified.rs
crates/shikomi-core/src/ipc/: error_code.rs  mod.rs  protection_mode.rs  request.rs  response.rs  secret_bytes.rs  summary.rs  version.rs
crates/shikomi-core/src/secret/: mod.rs
crates/shikomi-core/src/vault/: crypto_data.rs  header.rs  id.rs  mod.rs  nonce.rs  protection_mode.rs  record.rs  tests.rs  version.rs
crates/shikomi-core/src/vault/record/: aggregate.rs  kind.rs  label.rs  mod.rs  payload.rs  tests.rs
crates/shikomi-core/tests/: deny_toml_check.rs  nonce_overflow.rs  record_label_boundary.rs  secret_no_leak.rs  vault_lifecycle.rs
crates/shikomi-daemon/: Cargo.toml
crates/shikomi-daemon/src/: error.rs  lib.rs  main.rs  panic_hook.rs
crates/shikomi-daemon/src/backoff/: mod.rs  unlock.rs
crates/shikomi-daemon/src/cache/: lifecycle.rs  mod.rs  vek.rs
crates/shikomi-daemon/src/ipc/: framing.rs  handler.rs  handshake.rs  mod.rs  server.rs
crates/shikomi-daemon/src/ipc/handler/: add.rs  edit.rs  error_mapping.rs  list.rs  mod.rs  remove.rs  tests.rs
crates/shikomi-daemon/src/ipc/transport/: mod.rs  unix.rs  windows.rs
crates/shikomi-daemon/src/ipc/v2_handler/: change_password.rs  error_mapping.rs  lock.rs  mod.rs  rekey.rs  rotate_recovery.rs  unlock.rs
crates/shikomi-daemon/src/lifecycle/: mod.rs  shutdown.rs  signal_mask.rs  single_instance.rs  socket_path.rs
crates/shikomi-daemon/src/permission/: mod.rs  unix.rs  windows.rs  windows_acl.rs
crates/shikomi-daemon/src/permission/peer_credential/: mod.rs
crates/shikomi-daemon/tests/: e2e_daemon.rs  e2e_daemon_phase15.rs  e2e_daemon_phase15_pty.rs  it_protocol_roundtrip.rs  it_server_connection.rs  it_single_instance.rs  sub_e_v2_integration.rs
crates/shikomi-daemon/tests/common/: mod.rs  peer_mock.rs
crates/shikomi-daemon/tests/sub_e_v2_integration/: backoff.rs  handshake.rs  helpers.rs  lock_lifecycle.rs  rekey_rotate.rs  sanity.rs  unlock.rs
crates/shikomi-gui/: Cargo.toml
crates/shikomi-gui/src/: lib.rs
crates/shikomi-infra/: Cargo.toml
crates/shikomi-infra/benches/: kdf_bench.rs
crates/shikomi-infra/src/: lib.rs
crates/shikomi-infra/src/crypto/: mod.rs
crates/shikomi-infra/src/crypto/aead/: aes_gcm.rs  kat.rs  mod.rs
crates/shikomi-infra/src/crypto/kdf/: argon2id.rs  bip39_pbkdf2_hkdf.rs  kat.rs  mod.rs
crates/shikomi-infra/src/crypto/password/: mod.rs  zxcvbn_gate.rs
crates/shikomi-infra/src/crypto/rng/: mod.rs
crates/shikomi-infra/src/persistence/: audit.rs  error.rs  lock.rs  mod.rs  paths.rs  repository.rs
crates/shikomi-infra/src/persistence/permission/: mod.rs  unix.rs  windows.rs
crates/shikomi-infra/src/persistence/permission/windows/: ensure.rs  guard.rs  helper.rs  mod.rs  tests.rs  verify.rs
crates/shikomi-infra/src/persistence/sqlite/: atomic.rs  mapping.rs  mod.rs  schema.rs
crates/shikomi-infra/src/persistence/sqlite/mapping/: header.rs  mod.rs  params.rs  record.rs  tests.rs
crates/shikomi-infra/src/persistence/vault_migration/: confirmation.rs  error.rs  header.rs  mod.rs  record.rs  recovery.rs  service.rs  storage.rs
crates/shikomi-infra/tests/: aead_property.rs  from_ipc_error_code_phase15.rs  integration_error.rs  integration_roundtrip.rs  integration_system.rs  integration_test.rs  integration_windows.rs  integration_windows_retry.rs  vault_migration_integration.rs  vault_migration_property.rs
crates/shikomi-infra/tests/helpers/: mod.rs
docs/architecture/: context.md  dev.md  environment-diff.md  local.md  production.md  tech-stack.md  test-design.md
docs/architecture/context/: nfr.md  overview.md  process-model.md  threat-model.md
docs/features/cli-vault-commands/: basic-design.md  detailed-design.md  requirements-analysis.md  requirements.md  (+1 more)
scripts/: setup.ps1  setup.sh
scripts/ci/: audit-pin-sync.sh  audit-secret-paths.sh  bench-kdf-gating.sh
tests/docs/: sub-0-cross-ref.sh  sub-0-structure-lint.py  sub-a-static-checks.sh  sub-b-static-checks.sh  sub-c-static-checks.sh  sub-d-static-checks.sh  sub-e-static-checks.sh
tests/e2e/: sub-f-blackbox.sh
tests/unit/: test_audit_secret_paths_grep_gate.sh
(+114 files in other folders)
