[workspace]
resolver = "2"
members = [
    "crates/shikomi-core",
    "crates/shikomi-infra",
    "crates/shikomi-gui",
    "crates/shikomi-daemon",
    "crates/shikomi-cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["shikomi-dev"]
license = "MIT"
repository = "https://github.com/shikomi-dev/shikomi"
# MSRV: `.clippy.toml` の msrv と同値。`rust-toolchain.toml` は開発時チャンネル(stable)指定のみで、MSRV管理は本フィールドと `.clippy.toml` で一元化
rust-version = "1.80.0"
publish = false

[workspace.lints.rust]
# Windows 固有の Win32 Security API モジュール（permission/windows/）のみ allow(unsafe_code) で上書きする。
# forbid だとサブモジュールで allow できないため deny を使用する。
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
uuid            = { version = "1",    features = ["v7", "serde"] }
serde           = { version = "1",    features = ["derive"] }
secrecy         = { version = "0.10" }
zeroize         = { version = "1",    features = ["derive"] }
thiserror       = "2"
time            = { version = "0.3",  features = ["serde", "macros", "formatting", "parsing"] }
unicode-segmentation = "1"
rusqlite        = { version = "0.31", features = ["bundled"] }
fs4             = { version = "0.9",  default-features = false, features = ["sync"] }
cfg-if          = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
dirs            = "5"
shikomi-core    = { path = "crates/shikomi-core", version = "0.1.0" }
shikomi-infra   = { path = "crates/shikomi-infra", version = "0.1.0" }
# CLI 層の依存（cli-vault-commands feature で追加）
clap            = { version = "4",    features = ["derive", "env", "wrap_help"] }
anyhow          = "1"
is-terminal     = "0.4"
rpassword       = "7"
# テスト用
tempfile        = "3"
tracing-test    = "0.2"
serial_test     = "3"
assert_cmd      = "2"
predicates      = "3"
