[workspace]
resolver = "2"
members = [
    "crates/shikomi-core",
    "crates/shikomi-infra",
    "crates/shikomi-gui",
    "crates/shikomi-daemon",
    "crates/shikomi-cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["shikomi-dev"]
license = "MIT"
repository = "https://github.com/shikomi-dev/shikomi"
# MSRV: `.clippy.toml` の msrv と同値。`rust-toolchain.toml` は開発時チャンネル(stable)指定のみで、MSRV管理は本フィールドと `.clippy.toml` で一元化
rust-version = "1.80.0"
publish = false

[workspace.lints.rust]
# Windows 固有の Win32 Security API モジュール（permission/windows/）のみ allow(unsafe_code) で上書きする。
# forbid だとサブモジュールで allow できないため deny を使用する。
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
uuid            = { version = "1",    features = ["v7", "serde"] }
serde           = { version = "1",    features = ["derive"] }
secrecy         = { version = "0.10" }
zeroize         = { version = "1",    features = ["derive"] }
thiserror       = "2"
time            = { version = "0.3",  features = ["serde", "macros", "formatting", "parsing"] }
unicode-segmentation = "1"
rusqlite        = { version = "0.31", features = ["bundled"] }
fs4             = { version = "0.9",  default-features = false, features = ["sync"] }
cfg-if          = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
dirs            = "5"
shikomi-core    = { path = "crates/shikomi-core", version = "0.1.0" }
shikomi-infra   = { path = "crates/shikomi-infra", version = "0.1.0" }
# CLI 層の依存（cli-vault-commands feature で追加）
clap            = { version = "4",    features = ["derive", "env", "wrap_help"] }
anyhow          = "1"
is-terminal     = "0.4"
rpassword       = "7"
# IPC 層の依存（daemon-ipc feature で追加、tech-stack.md §2.1 でピン根拠確定）
tokio           = { version = "1.44.2", features = ["rt-multi-thread", "net", "io-util", "sync", "signal", "time", "macros"] }
tokio-util      = { version = "0.7",  default-features = false, features = ["codec"] }
rmp-serde       = "1.3"
bytes           = "1"
futures-util    = { version = "0.3",  default-features = false, features = ["std", "sink"] }
nix             = { version = "0.29", default-features = false, features = ["socket", "fs", "user", "signal"] }
windows-sys     = { version = "0.59", features = ["Win32_System_Pipes", "Win32_System_Threading", "Win32_Security", "Win32_Security_Authorization", "Win32_Foundation"] }
# テスト用
tempfile        = "3"
tracing-test    = "0.2"
serial_test     = "3"
assert_cmd      = "2"
predicates      = "3"
# pty 経由 E2E（Issue #33 / TC-E2E-017）。Unix 限定の pty allocation で
# `read_password`（rpassword）の非エコー経路を実観測する。`MIT OR Apache-2.0`、
# 依存数 < 10、2024+ メンテ。Windows は `cfg(unix)` ガードで skip。
expectrl        = "0.8"
