[package]
name = "shikomi-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# lib + bin の 2 ターゲット構成
# - lib: UseCase / Presenter 等の内部公開 Rust API を提供。結合テスト（tests/）から直接呼び出す目的
# - bin: `shikomi_cli::run()` を呼ぶ 3 行ラッパ。コンポジションルートは lib 側
# 設計根拠: docs/features/cli-vault-commands/detailed-design/public-api.md §前提: crate 構成
[lib]
name = "shikomi_cli"
path = "src/lib.rs"

[[bin]]
name = "shikomi"
path = "src/main.rs"

[dependencies]
shikomi-core  = { workspace = true }
shikomi-infra = { workspace = true }
clap          = { workspace = true }
anyhow        = { workspace = true }
is-terminal   = { workspace = true }
rpassword     = { workspace = true }
time          = { workspace = true }
uuid          = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror     = { workspace = true }
dirs          = { workspace = true }
# IPC 経路（daemon-ipc feature）
tokio         = { workspace = true }
tokio-util    = { workspace = true }
rmp-serde     = { workspace = true }
bytes         = { workspace = true }
futures-util  = { workspace = true }

[target.'cfg(unix)'.dependencies]
# Sub-F (#44) Phase 5 / C-41: core dump 抑制（Linux: prctl(PR_SET_DUMPABLE, 0) /
# macOS: setrlimit(RLIMIT_CORE, 0)）。`nix` 0.29 (workspace) は既存 features に
# `process` / `resource` を含まないため、Phase 5 専用に `libc` 直接呼出で実装する。
# 依存ツリー追加は本 1 件のみ、workspace 横断影響なし。
libc          = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys   = { workspace = true }

[dev-dependencies]
tempfile      = { workspace = true }
assert_cmd    = { workspace = true }
predicates    = { workspace = true }
serial_test   = { workspace = true }
# 暗号化 vault フィクスチャ helper (tests/common/fixtures.rs) で SQLite を直接書き出すため。
# CLI 本体は rusqlite を参照しない（`shikomi-infra` 経由）。本依存はテスト限定。
rusqlite      = { workspace = true }

[lints]
workspace = true
