[package]
name = "shikomi-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uuid                 = { workspace = true }
serde                = { workspace = true }
secrecy              = { workspace = true }
zeroize              = { workspace = true }
thiserror            = { workspace = true }
time                 = { workspace = true }
unicode-segmentation = { workspace = true }

[lints]
workspace = true
