[package]
name = "shikomi-infra"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shikomi-core  = { workspace = true }
rusqlite      = { workspace = true }
fs4           = { workspace = true }
cfg-if        = { workspace = true }
tracing       = { workspace = true }
dirs          = { workspace = true }
thiserror     = { workspace = true }
time          = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
tracing-test = { workspace = true }
serial_test  = { workspace = true }

[lints]
workspace = true
