[package]
name = "shikomi-infra"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shikomi-core  = { workspace = true }
rusqlite      = { workspace = true }
fs4           = { workspace = true }
cfg-if        = { workspace = true }
tracing       = { workspace = true }
dirs          = { workspace = true }
thiserror     = { workspace = true }
time          = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
tracing-test = { workspace = true }
serial_test  = { workspace = true }
rusqlite     = { workspace = true }
uuid         = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
] }

[lints]
workspace = true
