[package]
name = "shikomi-infra"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shikomi-core  = { workspace = true }
rusqlite      = { workspace = true }
fs4           = { workspace = true }
cfg-if        = { workspace = true }
tracing       = { workspace = true }
dirs          = { workspace = true }
thiserror     = { workspace = true }
time          = { workspace = true }
# Sub-B (#40) crypto アダプタ層（KDF / RNG / 強度ゲート）。
# `pbkdf2` / `hmac` は bip39 / hkdf / argon2 内部経由のため直接依存しない
# (tech-stack.md §4.7、kdf.md §`bip39` / `pbkdf2` / `hkdf` crate 呼出契約)。
argon2        = { workspace = true }
hkdf          = { workspace = true }
sha2          = { workspace = true }
bip39         = { workspace = true }
rand_core     = { workspace = true }
getrandom     = { workspace = true }
zxcvbn        = { workspace = true }
secrecy       = { workspace = true }
zeroize       = { workspace = true }
# Sub-C (#41) AEAD アダプタ (AES-256-GCM)。`subtle` は aes-gcm が transitive で
# 引くため**直接追加しない** (nonce-and-aead.md §`subtle` v2.5+ 制約: tag 比較は
# aes-gcm 内部の constant-time 経路に委譲)。
aes-gcm       = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
tracing-test = { workspace = true }
serial_test  = { workspace = true }
rusqlite     = { workspace = true }
uuid         = { workspace = true }
# Sub-B (#40) BC-3 リリースブロッカ用 KDF ベンチマーク (criterion)。
# `cargo bench -p shikomi-infra --bench kdf_bench` で起動、
# `.github/workflows/bench-kdf.yml` の `bench-kdf` ジョブが 3 OS で gating。
criterion    = { workspace = true }

# Sub-B (#40) BC-3 リリースブロッカ。Argon2id `FROZEN_OWASP_2024_05` の
# 単一 derive 時間 median を 750ms 閾値 (p95 ≤ 1.0s の proxy) で検証する。
[[bench]]
name = "kdf_bench"
harness = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
] }

[lints]
workspace = true
